# OrderFlow_Trading_Bot

./: .env.example  .gitignore  README.md  pyproject.toml
NinjaTrader/: COMPILATION_CHECKLIST.md  INSTALL_IN_NINJATRADER.md  README.md  REPLAY_VALIDATION_CHECKLIST.md
NinjaTrader/Core/: AdaptiveTargetPlanner.cs  AmdMarketPhaseEvaluator.cs  DisplacementMomentumEvaluator.cs  FairValueGapEvaluator.cs  HigherTimeframeBiasEvaluator.cs  HypotheticalOutcomeTracker.cs  HypotheticalPerformanceTracker.cs  IctTargetQualityEvaluator.cs  LiquiditySweepEvaluator.cs  LongOnlyOrderFlowEvaluator.cs  LongSetupCandidateEvaluator.cs  MarketContextEvaluator.cs  NinjaTraderSafetyGuards.cs  OrderFlowConfirmationEvaluator.cs  OrderFlowFeatureEvaluator.cs  OteZoneEvaluator.cs  ReplayValidationTracker.cs  SessionStructureEvaluator.cs  SignalObservationJournalWriter.cs  StrategyDiagnosticsEngine.cs  StrategyFilterEngine.cs  ValueAcceptanceEvaluator.cs  ValueRoadmapEvaluator.cs
docs/: PLATFORM_DIRECTION.md
samples/: invalid_bad_risk_reward.json  invalid_missing_confirmation.json  invalid_short_attempt.json  valid_failed_breakdown_long.json  valid_pullback_continuation_long.json
tests/: conftest.py  test_cli.py  test_decision_engine.py  test_evaluate_json_cli.py  test_ibkr_cli.py  test_ibkr_config_safety.py  test_ibkr_read_only_adapter.py  test_ibkr_safety.py  test_input_models.py  test_json_input.py  test_long_only_guard.py  test_ninjatrader_skeleton.py  test_paper_cli.py  test_paper_lifecycle.py  test_paper_models.py  test_risk_engine.py  test_setup_classifier.py  test_trade_journal.py
(+91 files in other folders)
